# Simple-The_Game_Engine

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LATEST.txt  LICENSE  MANIFEST.in  README.md  badges.html  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: branch.yml  easierbot.yml  editor.yml  publish.yml
assets/: checker.ppm
cpp_core/bindings/: bindings.cpp
cpp_core/branding/: branding.cpp  branding.h
cpp_core/engine/: engine.cpp  engine.h
cpp_core/input/: input.cpp  input.h
cpp_core/math/: transform.h
cpp_core/platform/: gl_api.h  gl_loader.cpp  gl_loader.h  window_hints.h  window_hints_common.cpp  window_hints_macos.cpp
cpp_core/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
cpp_core/scene/: entity.cpp  entity.h  scene.cpp  scene.h
cpp_core/window/: window.cpp  window.h
docs/: api_reference.md  architecture.md  editor.md  examples.md  getting_started.md  index.md
editor/: README.md
editor/specs/: _common.py  linux.spec  macos.spec  windows.spec
examples/: basic_game.py  bouncing_cubes.py  camera_orbit.py  click_spawn_textured.py  color_pulse.py  cube_arena_game.py  cube_arena_hud.py  fly_camera.py  grid_wave.py  multi_object_scene.py  pause_and_step.py  pro_debug_hud.py  rotating_cube.py  solar_system.py  textured_cube.py  timeline_animation.py  vsync_toggle.py
python_api/: __init__.py  camera.py  config.py  editor_runtime.py  objects.py  scene.py
python_api/editor/: app.py  blueprint.py  runtime.py
python_api/tools/: __init__.py  blueprint.py
templates/basic_project/: scene.simple.json
tools/: build_editor.py  simple_editor.spec  simple_editor_entry.py
