[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "simple-game-engine"
version = "0.1.1"
description = "Simple: lightweight C++/OpenGL engine with a Python-first API"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Simple Engine Contributors" }]
keywords = ["engine", "opengl", "pybind11", "glfw", "game", "animation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[project.urls]
Homepage = "https://github.com/<your-org-or-user>/simple"
Repository = "https://github.com/<your-org-or-user>/simple"
Issues = "https://github.com/<your-org-or-user>/simple/issues"

[project.scripts]
simple-editor = "simple.editor.app:main"

[project.optional-dependencies]
editor = [
  "pyinstaller>=6.0",
]

[tool.scikit-build]
cmake.version = ">=3.20"
build.verbose = false
install.strip = false
wheel.packages = []
